@startuml
!pragma layout smetana
skinparam shadowing false
skinparam defaultFontName Arial
skinparam linetype ortho
skinparam ArrowColor #4A5568
skinparam BorderColor #4A5568
skinparam BackgroundColor white
title OpenData SQL Server schemas

entity "core.application_property" as ApplicationProperty {
  * property_key : varchar(200) <<PK>>
  --
  property_value : nvarchar(max)
  is_encrypted : bit
  updated_at : datetime2
}

entity "core.plugin_registry" as PluginRegistry {
  * plugin_id : varchar(100) <<PK>>
  --
  display_name : nvarchar(200)
  implementation_class : nvarchar(500)
  is_enabled : bit
  configuration_version : int
  registered_at : datetime2
  updated_at : datetime2
}

entity "core.plugin_property" as PluginProperty {
  * plugin_id : varchar(100) <<PK>>
  * property_key : varchar(200) <<PK>>
  --
  property_value : nvarchar(max)
  updated_at : datetime2
}

entity "core.PluginRun" as PluginRun {
  * RunId : uniqueidentifier <<PK>>
  --
  PluginId : nvarchar
  Status : varchar
  StartedAt : datetime2
  CompletedAt : datetime2
  RowsRead : bigint
  RowsInserted : bigint
  RowsUpdated : bigint
  RowsSkipped : bigint
}

entity "openmeteo.Location" as Location {
  * LocationId : bigint <<PK>>
  --
  LocationKey : nvarchar <<UQ>>
  LocationName : nvarchar
  Latitude : decimal
  Longitude : decimal
  TimeZone : nvarchar
}

entity "openmeteo.DailyWeather" as Weather {
  * LocationId : bigint <<PK,FK>>
  * ObservationDate : date <<PK>>
  --
  MinimumTemperatureC : decimal
  MaximumTemperatureC : decimal
  MeanTemperatureC : decimal
  Sunrise : time
  Sunset : time
  DaylightMinutes : smallint
  WeatherCode : smallint
  WeatherDescription : nvarchar
  LastRunId : uniqueidentifier <<FK>>
}

entity "core.dataset" as Dataset {
  * dataset_id : int <<PK>>
  --
  dataset_code : varchar <<UQ>>
  plugin_code : varchar
}

entity "core.ingestion_run" as IngestionRun {
  * ingestion_run_id : bigint <<PK>>
  --
  dataset_id : int <<FK>>
  status : varchar
}

entity "core.source_file" as SourceFile {
  * source_file_id : bigint <<PK>>
  --
  ingestion_run_id : bigint <<FK>>
  sha256 : char(64)
}

entity "core.ingestion_error" as IngestionError {
  * ingestion_error_id : bigint <<PK>>
  --
  ingestion_run_id : bigint <<FK>>
  source_file_id : bigint <<FK>>
  processing_stage : varchar
}

entity "ofgem.price_cap_period" as Period {
  * price_cap_period_id : bigint <<PK>>
  --
  source_file_id : bigint <<FK>>
  effective_from : date
  effective_to : date
}

entity "ofgem.price_cap_level" as Level {
  * price_cap_period_id : bigint <<PK,FK>>
  * region_code : varchar <<PK>>
  * payment_method_code : varchar <<PK>>
  * tariff_type_code : varchar <<PK>>
  * consumption_basis_code : varchar <<PK>>
  * vat_included : bit <<PK>>
  --
  amount_gbp : decimal
  ingestion_run_id : bigint <<FK>>
}

entity "octopus.statement_file" as StatementFile {
  * statement_file_id : bigint <<PK>>
  --
  file_name : nvarchar
  sha256 : char(64)
  statement_date : date
  status : varchar
  last_run_id : uniqueidentifier <<FK>>
}

entity "octopus.electric_data" as ElectricData {
  * bill_date : date <<PK>>
  * tariff_period_start : date <<PK>>
  * tariff_period_end : date <<PK>>
  * tariff_name : nvarchar <<PK>>
  * mpan : varchar <<PK>>
  * meter_id : varchar <<PK>>
  * start_reading_date : date <<PK>>
  * end_reading_date : date <<PK>>
  --
  energy_used_kwh : decimal
  total_cost_gbp : decimal
  last_run_id : uniqueidentifier <<FK>>
}

entity "octopus.gas_data" as GasData {
  * bill_date : date <<PK>>
  * tariff_period_start : date <<PK>>
  * tariff_period_end : date <<PK>>
  * tariff_name : nvarchar <<PK>>
  * mprn : varchar <<PK>>
  * meter_id : varchar <<PK>>
  * start_reading_date : date <<PK>>
  * end_reading_date : date <<PK>>
  --
  consumption_m3 : decimal
  energy_used_kwh : decimal
  total_cost_gbp : decimal
  last_run_id : uniqueidentifier <<FK>>
}

PluginRegistry ||--o{ PluginProperty
Location ||--o{ Weather
PluginRun ||--o{ Weather : LastRunId
Dataset ||--o{ IngestionRun
IngestionRun ||--o{ SourceFile
IngestionRun ||--o{ IngestionError
SourceFile |o--o{ IngestionError
SourceFile ||--o{ Period
Period ||--o{ Level
IngestionRun ||--o{ Level
PluginRun ||--o{ StatementFile : last_run_id
PluginRun ||--o{ ElectricData : last_run_id
PluginRun ||--o{ GasData : last_run_id
note right of ApplicationProperty
Registered application settings;
password row may be encrypted.
end note
note right of PluginRegistry
Authoritative registered metadata
and enabled/disabled status.
end note
note right of PluginProperty
Complete registered definitions
and properties by plugin id.
end note
note right of StatementFile
Unique (file_name, sha256)
completed-file ledger.
end note
@enduml
